--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	   			野有蔓草<br />
 				---《诗经》<br />
 	            赠给你的小诗 <br />
-	            ---琪<br />
+	            ---梁琪琪<br />
 
 
 		</div>
