--- a/index.html
+++ b/index.html
@@ -29,20 +29,13 @@
 	<div id="content">
 		<div id="code">
 			<p style="line-height:180%">
-	        	野有蔓草，零露漙兮。<br />
-	            有一美人，清扬婉如。</span><br />
-	            邂逅相遇，适我愿兮。<br /><br />
-        	</p>
-			<p style="line-height:180%">
-	            野有蔓草，零露瀼瀼。<br />
-	            有一美人，婉如清扬。<br />
-	            邂逅相遇，与子偕臧。<br /><br />
+	            你问我爱你值得不值得<br />
+	            其实你应该知道<br />
+	            爱就是不问值得不值得。<br /><br />
 	        </p>
             </p>
-            
-	   			野有蔓草<br />
-				---《诗经》<br />
-	            赠给你的小诗 <br />
+            			---张爱玲<br />
+	            赠给你的小诗（提前祝思雨生日快落~） <br />
 	            ---梁琪琪<br />
 
 
